DOC-2171: 6.7-release-notes.adoc
Code-comment edit.

--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -750,7 +750,7 @@ After a drag-and-drop event, the Accordion component would be thus:
 <summary>Accordion</summary>
 <h1>block_element</h1>
 <summary class="mce-accordion-summary">&nbsp;summary...</summary>
-<!-- Note the duplicated <summary> class. -->
+<!-- Note the duplicated <summary>. -->
 <!-- Also note, this comment was manually added to this example. -->
 <p>Accordion body...</p>
 </details>
