--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -886,6 +886,7 @@ Fixes were introduced with the release of {productname} 6.4.1, that:
 
 As a result, when a root element is set to `contenteditable="false"`, any `contenteditable="true"` elements inside that root element such as `<p>` tag will no longer try to split the `contenteditable="true"` element. 
 
+[[creating-a-list-in-a-table-cell-when-the-caret-is-in-front-of-an-anchor-element-would-not-properly-include-the-anchor-in-the-list]]
 === Creating a list in a table cell when the caret is in front of an anchor element would not properly include the anchor in the list
 //#TINY-6853
 
