--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -136,7 +136,7 @@ The following interactive remote storage configuration example provides guidance
 liveDemo::{plugincode}[]
 
 [[the-insertion-point-marker]]
-==== The insertion point marker
+=== The insertion point marker
 
 include::partial$misc/admon-requires-6.7v.adoc[]
 
