DOC-2182: content-filtering.adoc
Added `include::` statement, pointing to `/modules/ROOT/partials/configuration/indent.adoc` file.

--- a/modules/ROOT/pages/content-filtering.adoc
+++ b/modules/ROOT/pages/content-filtering.adoc
@@ -33,6 +33,8 @@ include::partial$configuration/forced_root_block.adoc[]
 
 include::partial$configuration/forced_root_block_attrs.adoc[]
 
+include::partial$configuration/indent.adoc[]
+
 include::partial$configuration/invalid_elements.adoc[]
 
 include::partial$configuration/invalid_styles.adoc[]
