--- a/modules/ROOT/partials/configuration/indent.adoc
+++ b/modules/ROOT/partials/configuration/indent.adoc
@@ -1,7 +1,7 @@
 [[indent]]
 == `+indent+`
 
-This option, which is on by default, adds a newline character — U+000A, `\n` — between closing and opening block elements when HTML is output using `xref:apis/tinymce.editor.adoc#getContent[getContent()]` and when HTML is rendered in the {productname} Preview dialog.
+This option, which is on by default, adds a newline character — U+000A, `\n` — between closing and opening block elements when HTML is output using `xref:apis/tinymce.editor.adoc#getContent[getContent()]` and when HTML is rendered in the {productname} xref:preview.adoc[Preview] dialog.
 
 Set `+indent+` to `false` to get HTML output from {productname} without having any newline characters added.
 
