DOC-2177: dialog-component.adoc
Typo correction.

--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -733,7 +733,7 @@ This option *requires* `+file_picker_callback+` to be configured.
 
 *urlinput for links*
 
-The filepicker will accept any file type; the typeahead will include 5 previously entered URLs plus all anchor targets and headings in the document; and the file picker button will have a custom tooltip..
+The filepicker will accept any file type; the typeahead will include 5 previously entered URLs plus all anchor targets and headings in the document; and the file picker button will have a custom tooltip.
 
 [source,js]
 ----
