--- a/modules/ROOT/pages/apis/tinymce.windowmanager.adoc
+++ b/modules/ROOT/pages/apis/tinymce.windowmanager.adoc
@@ -18,10 +18,10 @@ tinymce.activeEditor.windowManager.openUrl({
   height: 240
 });
 
-// Displays an alert box using the active editors window manager instance
+// Displays an alert box using the active editor’s window manager instance
 tinymce.activeEditor.windowManager.alert('Hello world!');
 
-// Displays a confirm box and an alert message will be displayed depending on what you choose in the confirm
+// Displays a confirm box. An alert message will display depending on what is chosen in the confirm box.
 tinymce.activeEditor.windowManager.confirm('Do you want to do something?', (state) => {
   const message = state ? 'Ok' : 'Cancel';
   tinymce.activeEditor.windowManager.alert(message);
@@ -36,11 +36,11 @@ tinymce.activeEditor.windowManager.confirm('Do you want to do something?', (stat
 [cols="2,5,1",options="header"]
 |===
 |Name|Summary|Defined by
-|xref:#alert[alert()]|Creates an alert dialog. Please don't use the blocking behavior of this
-native version use the callback method instead then it can be extended.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
+|xref:#alert[alert()]|Creates an alert dialog. Do not use the blocking behavior of this
+native version. Use the callback method instead; then it can be extended.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
 |xref:#close[close()]|Closes the top most window.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
-|xref:#confirm[confirm()]|Creates a confirm dialog. Please don't use the blocking behavior of this
-native version use the callback method instead then it can be extended.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
+|xref:#confirm[confirm()]|Creates an alert dialog. Do not use the blocking behavior of this
+native version. Use the callback method instead; then it can be extended.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
 |xref:#open[open()]|Opens a new window.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
 |xref:#openUrl[openUrl()]|Opens a new window for the specified url.|`xref:apis/tinymce.windowmanager.adoc[WindowManager]`
 |===
@@ -54,8 +54,8 @@ native version use the callback method instead then it can be extended.|`xref:ap
 ----
 alert(message: String, callback: Function, scope: Object)
 ----
-Creates an alert dialog. Please don't use the blocking behavior of this
-native version use the callback method instead then it can be extended.
+Creates an alert dialog. Do not use the blocking behavior of this
+native version. Use the callback method instead; then it can be extended.
 
 ==== Examples
 [source, javascript]
@@ -88,8 +88,8 @@ Closes the top most window.
 ----
 confirm(message: String, callback: Function, scope: Object)
 ----
-Creates a confirm dialog. Please don't use the blocking behavior of this
-native version use the callback method instead then it can be extended.
+Creates an alert dialog. Do not use the blocking behavior of this
+native version. Use the callback method instead; then it can be extended.
 
 ==== Examples
 [source, javascript]
@@ -113,13 +113,18 @@ tinymce.activeEditor.windowManager.confirm('Do you want to do something?', (stat
 === open()
 [source, javascript]
 ----
-open(args: Object)
+open(config: Object, params: Object): WindowManager.DialogInstanceApi
 ----
 Opens a new window.
 
 ==== Parameters
 
-* `args (Object)` - For a list of options, see: link:https://www.tiny.cloud/docs/tinymce/6/dialog-configuration/#configurationoptions[Dialog - Configuration options].
+* `config (Object)` - For information on the available options, see: link:https://www.tiny.cloud/docs/tinymce/6/dialog-configuration/#options[Dialog - Configuration options].
+* `params (Object)` - (Optional) For information on the available options, see: link:https://www.tiny.cloud/docs/tinymce/6/dialog-configuration/#configuration-parameters[Dialog - Configuration parameters].
+
+==== Return value
+
+* `WindowManager.DialogInstanceApi` - A new dialog instance.
 
 '''
 
@@ -127,12 +132,16 @@ Opens a new window.
 === openUrl()
 [source, javascript]
 ----
-openUrl(args: Object)
+openUrl(config: Object): WindowManager.UrlDialogInstanceApi
 ----
 Opens a new window for the specified url.
 
 ==== Parameters
 
-* `args (Object)` - For a list of options, see: link:https://www.tiny.cloud/docs/tinymce/6/urldialog/#configuration[URL dialog configuration].
+* `config (Object)` - For information on the available options, see: link:https://www.tiny.cloud/docs/tinymce/6/urldialog/#configuration[URL dialog - Configuration].
+
+==== Return value
+
+* `WindowManager.UrlDialogInstanceApi` - A new URL dialog instance.
 
 '''
