--- a/modules/ROOT/partials/events/ai-events.adoc
+++ b/modules/ROOT/partials/events/ai-events.adoc
@@ -1,11 +1,11 @@
-The following events are provided by the xref:<plugincode>.adoc[<Plugin name> plugin].
+The following events are provided by the xref:{plugincode}.adoc[{pluginname} plugin].
 
 [cols="1,1,2",options="header"]
 |===
 |Name          |Data   |Description
 |AIRequest     |`+{ request: Request }+`           |Fired when a request is sent to the `+ai_request+` function.
-|AIResponse    |`+{ response: `+string+` }+`       |Fired when a `+ai_request+` Promise is resolved.
-|AIError       |`+{ error: Error | `+string+` }+`  |Fired when a `+ai_request+` Promise is rejected.
+|AIResponse    |`+{ response: string }+`       |Fired when an `+ai_request+` Promise is resolved.
+|AIError       |`+{ error: Error or string }+`  |Fired when an `+ai_request+` Promise is rejected.
 |AIDialogOpen  |N/A    |Fired when the {pluginname} dialog is opened.
 |AIDialogClose |N/A    |Fired when the {pluginname} dialog is closed.
 |===
