--- a/modules/ROOT/pages/upgrading.adoc
+++ b/modules/ROOT/pages/upgrading.adoc
@@ -1,3 +1,7 @@
+[IMPORTANT]
+{productname} 5 reached end of support on April 20th, 2023. No more bug fixes, security updates, or new features will be introduced to {productname} 5.
+To ensure you are running the most secure, up-to-date version, upgrade to {productname} 6 or sign up for {productname} 5 Long Term Support (LTS) (available in late 2023).
+
 = Upgrading TinyMCE
 :navtitle: Upgrading TinyMCE
 :description: How to upgrade TinyMCE via Tiny Cloud, package manager options, and Self-hosted options.
