--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -8,10 +8,14 @@ NOTE: This is the {productname} Community version changelog. For information abo
 == 6.7.2 - 2023-10-25
 
 === Fixed
-* Removed use of `async` for editor rendering which caused visual blinking when reloading the editor in-place.
-* Toggling a list that contains an LI element having another list as its first child would remove the remaining content within that LI element.
-* Applying heading formatting to the content of the summary element extended its application to the content of the parent details element.
-
+* Applying heading formatting to the content of the `summary` element extended its application to the content of the parent `details` element.
+// TINY-10154
+* css loading in `toolbardrawertoggletest` flickering.
+// TINY-10249
+* Toggling a list that contained a list item element — `<li>` — which, in turn, contained another list item element as its first child, removed other content within the first list item element.
+// TINY-10213
+* If multiple inline formatting options were set at the insertion point, turning any one of these options off turned all the set options off.
+//TINY-10132
 == 6.7.0 - 2023-08-30
 
 === Added
