DOC-2198: add 5x LTS important banner to the top of upgrading.adoc. (#2935)
* DOC-2198: add 5x LTS important banner to the top of upgrading.adoc.

* DOC-9198: update LTS message and moved message location.

--- a/modules/ROOT/pages/upgrading.adoc
+++ b/modules/ROOT/pages/upgrading.adoc
@@ -3,4 +3,7 @@
 :description: How to upgrade TinyMCE via Tiny Cloud, package manager options, and Self-hosted options.
 :keywords: npm, bower, composer, nuget, update, updating, upgrade, upgrading
 
+[IMPORTANT]
+https://www.tiny.cloud/long-term-support/[Learn more about TinyMCE 5 LTS] if you need to remain on TinyMCE 5 and continue to receive security updates.
+
 include::partial$install/upgrading-info.adoc[]
