--- a/modules/ROOT/pages/6.7.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.2-release-notes.adoc
@@ -11,34 +11,8 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 {productname} 6.7.2 was released for {enterpriseversion} and {cloudname} on Wednesday, November 1^st^, 2023. These release notes provide an overview of the changes for {productname} 6.7.2, including:
 
-* xref:accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 * xref:bug-fixes[Bug fixes]
-
-
-[[accompanying-premium-plugin-changes]]
-== Accompanying Premium plugin changes
-
-The following premium plugin updates were released alongside {productname} 6.7.2.
-
-[[powerpaste-622]]
-=== PowerPaste 6.2.2
-
-The {productname} 6.7.2 release includes an accompanying release of the **PowerPaste** premium plugin.
-
-**PowerPaste** 6.2.2 includes the following fix.
-
-==== Stopped pasting comments from Microsoft Word documents when Safari is the host browser
-
-**PowerPaste** 6.2.1 included xref:6.7-release-notes.adoc#powerpaste-621[a fix] that stopped comments associated with a copied portion of a Microsoft Word document being pasted into a {productname} document as footnotes. 
-
-This fix had a known issue: it did not work when the host browser for a {productname} instance was Safari.
-
-**PowerPaste** 6.2.2 addresses this known issue.
-
-With this update, when a selection from a Microsoft Word document that includes comments is copied and pasted (⌘-V) into a {productname} instance, the included comments are not set as footnotes even when Safari is the host browser.
-
-
 
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
@@ -55,14 +29,24 @@ The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also in
 For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
 
 
-
 [[bug-fixes]]
 == Bug fixes
 
-{productname} 6.7.2 also includes the following bug fix<es>:
+{productname} 6.7.2 also includes the following bug fixes:
 
 === Applying heading formatting to the content of the `summary` element extended its application to the content of the parent `details` element.
 // TINY-10154
+
+// CCFR
+
+=== The function `getModifierState` did not work on events passed through the editor as expected.
+// TINY-10263
+
+// CCFR
+
+
+=== List items containing a nested list between two text caused some list operations to fail.
+// TINY-10268
 
 // CCFR
 
