--- a/modules/ROOT/pages/6.7.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.2-release-notes.adoc
@@ -59,9 +59,21 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Toggling a list that contained a list item element — `<li>` — which, in turn, contained another list item element as its first child, removed other content within the first list item element.
 // TINY-10213
+Previously, when a user attempted to indent or outdent an element nested within a list, the list was converted into a model which resulted in it being recreated from that model.
 
-// CCFR
+As a consequence of this, the model would not handle comments at the `<li>` element level, which resulted in content deletion of comments nested within `<li>` structures like:
 
+[source, html]
+----
+<li>
+  [some_list]
+  [some_other_element]
+</li>
+----
+
+In addition, when the editor would try to manage comments within a `<li>` element, a console error would be thrown resulting in all other elements being ignored.
+
+{productname} 6.7.2 addresses this issue, now, our model correctly manages comments and other elements when they are preceded from a list, and the error is no longer present.
 
 === If multiple inline formatting options were set at the insertion point, turning any one of these options off turned all the set options off.
 //TINY-10132
