--- a/modules/ROOT/pages/6.7.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.2-release-notes.adoc
@@ -71,7 +71,7 @@ As a consequence of this, the model would not handle a list and a not-list items
 </li>
 ----
 
-In addition, when the editor would try to manage comments within a `<li>` element, a console error would be thrown resulting in all other elements being ignored.
+In addition, when the editor would try to manage comments at the `<li>` element level, a console error would be thrown resulting in all other elements being ignored.
 
 {productname} 6.7.2 addresses this issue, now, our model correctly manages comments and other elements when they are preceded from a list, and the error is no longer present.
 
