--- a/modules/ROOT/pages/6.7.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.2-release-notes.adoc
@@ -41,9 +41,15 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === The function `getModifierState` did not work on events passed through the editor as expected.
 // TINY-10263
+The exception error "Uncaught TypeError: Illegal invocation" was displayed in the console, when the editor called the 'getModifierState' function on a **keydown** event action.
 
-// CCFR
+This error was introduced, when the function was re-used in a previous update to {productname}, but, the updated logic for the origional function was not changed to consider the newly introduced context.
 
+As a consequence, any attempts to invoke this function resulted in the TypeError being displayed in the users developer console.
+
+{productname} 6.7.2 addresses this issue, by updating the 'getModifierState' function to now consider the updated context introduced in a previous release.
+
+As a result, the TypeError is no longer displayed when the editor calls the 'getModifierState' function on an event during a **keydown** action.
 
 === List items containing a nested list between two text caused some list operations to fail.
 // TINY-10268
