--- a/modules/ROOT/pages/6.7.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.2-release-notes.adoc
@@ -45,7 +45,7 @@ The exception error "Uncaught TypeError: Illegal invocation" was displayed in th
 
 This error was introduced, when the function was re-used in a previous update to {productname}, but, the updated logic for the original function was not changed to consider the newly introduced context.
 
-As a consequence, any attempts to invoke this function resulted in the TypeError being displayed in the users developer console.
+As a consequence, any attempts to invoke this function resulted in the TypeError being displayed in the console.
 
 {productname} 6.7.2 addresses this, now, when a integrator uses the `getModifierState` on the event object a keydown event no longer triggers an error.
 
